--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 Theme Name: Pressenza-dev
 Author: Tom Butikofer & Stefano Cecere
 Version: 1.3.0
+GitHub Theme URI: https://github.com/Pressenza/pressenza-dev.git
+GitHub Branch: master
 *//*!
  * Bootstrap v3.3.6 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
